--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
   <head>
     <title>Hello World Application</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>Hello World</h1>
+    <script>
+      require('./index.js')
+    </script>
   </body>
 </html>
