--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <html>
-  <head>
-    <title>Hello World Application</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <h1>Hello World</h1>
-    <script>
-      require('./index.js')
-    </script>
-  </body>
+
+<head>
+  <title>Hello World Application</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <form action="/action_page.php">
+    <label for="customerName">ชื่อ-นามสกุล ลูกค้า</label>
+    <input type="text" id="customerName" name="customerName">
+    <br><br>
+
+    <label for="customerAddress">ที่อยู่ ลูกค้า</label>
+    <input type="text" id="customerAddress" name="customerAddress">
+    <br><br>
+
+    <label for="customerTel">หมายเลขโทรศัพท์ ลูกค้า</label>
+    <input type="text" id="customerTel" name="customerTel">
+    <br><br>
+
+    <input type="submit" value="Submit">
+  </form>
+
+  <script>
+    require('./index.js')
+  </script>
+</body>
+
 </html>
