fix* 'require()' is not defined

--- a/home.html
+++ b/home.html
@@ -25,6 +25,9 @@
             <a href="#">รายการอะไหล่</a>
         </div>
     </div>
+    <script type="module">
+        import './index.js';
+    </script>
 </body>
 
 </html>
