Design login and Add dropdown icon

--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
 <head>
     <title>Seutrong Service</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -11,18 +12,50 @@
         <img border="0" alt="SEUTRONG" src="" width="50" height="50">
         <a href="repair_info.html">ข้อมูลบริการซ่อม</a>
         <a href="return_claim_info.html">ข้อมูลการคืนสินค้า</a>
-        <a href="return_claim_info.html">ข้อมูลการจัดส่งสินค้า</a>
-        <a href="return_claim_info.html">ข้อมูลการติดตั้ง</a>
+        <a href="delivery_info.html">ข้อมูลการจัดส่งสินค้า</a>
+        <button class="dropdown-btn">
+            ข้อมูลการติดตั้ง
+            <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-container">
+            <a href="#">
+                <i class="fa fa-caret-right"></i>
+                จานดาวเทียม
+            </a>
+            <a href="#">
+                <i class="fa fa-caret-right"></i>
+                แอร์
+            </a>
+            <a href="#">
+                <i class="fa fa-caret-right"></i>
+                เครื่องทำน้ำอุ่น
+            </a>
+        </div>
         <button class="dropdown-btn">
             จัดการรายละเอียด
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-container">
-            <a href="#">รายชื่อยี่ห้อ</a>
-            <a href="#">รายชื่อลูกค้า</a>
-            <a href="#">รายชื่อช่าง</a>
-            <a href="#">รายชื่อศูนย์บริการ</a>
-            <a href="#">รายการอะไหล่</a>
+            <a href="#">
+                <i class="fa fa-caret-right"></i>
+                รายชื่อยี่ห้อ
+            </a>
+            <a href="#">
+                <i class="fa fa-caret-right"></i>
+                รายชื่อลูกค้า
+            </a>
+            <a href="#">
+                <i class="fa fa-caret-right"></i>
+                รายชื่อพนักงาน
+            </a>
+            <a href="#">
+                <i class="fa fa-caret-right"></i>
+                รายชื่อศูนย์บริการ
+            </a>
+            <a href="#">
+                <i class="fa fa-caret-right"></i>
+                รายการอะไหล่
+            </a>
         </div>
     </div>
     <script type="module">
