Try implementing with fs module to load info_page.html onclick

--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-container">
-            <a href="#">
+            <a href="#" id="my-button">
                 <i class="fa fa-caret-right"></i>
                 รายชื่อยี่ห้อ
             </a>
@@ -58,8 +58,11 @@
             </a>
         </div>
     </div>
-    <script type="module">
-        import './index.js';
+
+    <div class="main" id="my-div">First content</div>
+
+    <script>
+        require('./index.js');
     </script>
 </body>
 
