--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 <body>
     <!-- The sidenav -->
     <div class="sidenav">
-        <img border="0" alt="SEUTRONG" src="" width="50" height="50">
+        <img border="0" alt="SEUTRONG" src="LOGO_square_or.jpg" width="200" height="200">
         <a href="repair_info.html">ข้อมูลบริการซ่อม</a>
         <a href="return_claim_info.html">ข้อมูลการคืนสินค้า</a>
         <a href="delivery_info.html">ข้อมูลการจัดส่งสินค้า</a>
