Design info_page.html

--- a/forms/repairing_form.html
+++ b/forms/repairing_form.html
@@ -116,7 +116,7 @@
             <input type="text" id="productFailure" name="productFailure">
             <br><br>
             <label for="repairingBudget">งบประมาณการซ่อมของลูกค้า</label>
-            <input type="text" id="repairingBudget" name="repairingBudget">
+            <input type="number" id="repairingBudget" name="repairingBudget">
             <br><br>
         </div>
 
