--- a/info_page.html
+++ b/info_page.html
@@ -1,13 +1,38 @@
 <html>
 
 <head>
-
+    <title>Seutrong Service</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <h1>Page Header</h1>
     <form action="#">
-        <input class="btn" type="submit" value="Form">
+        <label for="search">Search</label>
+        <select id="searchField" name="searchField">
+            <option value="field">Field</option>
+            <!-- option from database fields -->
+        </select>
+        <input type="search" id="searchBox" name="searchBox">
+        <input type="submit">
     </form>
+    <form action="#">
+        <input class="addBtn" type="submit" value="Add new record">
+    </form>
+    <table class="infoTable" id="infoTable">
+        <tr>
+            <th>Column Header</th>
+            <th>Column Header</th>
+        </tr>
+        <tr>
+            <td>data1</td>
+            <td>data2</td>
+        </tr>
+    </table>
+    <div class="arrow">
+        <a href="#" class="previous">Previous</a>
+        <a href="#" class="next">Next</a>
+    </div>
 </body>
 
 </html>
