Manage files to directories

--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Seutrong Service</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/side_nav.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
@@ -18,15 +18,15 @@
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-container">
-            <a href="#">
+            <a href="#" id="navButton">
                 <i class="fa fa-caret-right"></i>
                 จานดาวเทียม
             </a>
-            <a href="#">
+            <a href="#" id="navButton">
                 <i class="fa fa-caret-right"></i>
                 แอร์
             </a>
-            <a href="#">
+            <a href="#" id="navButton">
                 <i class="fa fa-caret-right"></i>
                 เครื่องทำน้ำอุ่น
             </a>
@@ -36,33 +36,33 @@
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-container">
-            <a href="#" id="my-button">
+            <a href="#" id="navButton">
                 <i class="fa fa-caret-right"></i>
                 รายชื่อยี่ห้อ
             </a>
-            <a href="#">
+            <a href="#" id="navButton">
                 <i class="fa fa-caret-right"></i>
                 รายชื่อลูกค้า
             </a>
-            <a href="#">
+            <a href="#" id="navButton">
                 <i class="fa fa-caret-right"></i>
                 รายชื่อพนักงาน
             </a>
-            <a href="#">
+            <a href="#" id="navButton">
                 <i class="fa fa-caret-right"></i>
                 รายชื่อศูนย์บริการ
             </a>
-            <a href="#">
+            <a href="#" id="navButton">
                 <i class="fa fa-caret-right"></i>
                 รายการอะไหล่
             </a>
         </div>
     </div>
 
-    <div class="main" id="my-div">First content</div>
+    <div class="main" id="mainContent">First content</div>
 
     <script>
-        require('./index.js');
+        require('./home.js');
     </script>
 </body>
 
