--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Seutrong Service</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles/login.css">
 </head>
 
 <body>
