apply navButton text to main pageHeader

--- a/home.html
+++ b/home.html
@@ -18,15 +18,15 @@
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-container">
-            <a href="#" id="navButton">
+            <a href="#" class="navButton">
                 <i class="fa fa-caret-right"></i>
                 จานดาวเทียม
             </a>
-            <a href="#" id="navButton">
+            <a href="#" class="navButton">
                 <i class="fa fa-caret-right"></i>
                 แอร์
             </a>
-            <a href="#" id="navButton">
+            <a href="#" class="navButton">
                 <i class="fa fa-caret-right"></i>
                 เครื่องทำน้ำอุ่น
             </a>
@@ -36,23 +36,23 @@
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-container">
-            <a href="#" id="navButton">
+            <a href="#" class="navButton">
                 <i class="fa fa-caret-right"></i>
                 รายชื่อยี่ห้อ
             </a>
-            <a href="#" id="navButton">
+            <a href="#" class="navButton">
                 <i class="fa fa-caret-right"></i>
                 รายชื่อลูกค้า
             </a>
-            <a href="#" id="navButton">
+            <a href="#" class="navButton">
                 <i class="fa fa-caret-right"></i>
                 รายชื่อพนักงาน
             </a>
-            <a href="#" id="navButton">
+            <a href="#" class="navButton">
                 <i class="fa fa-caret-right"></i>
                 รายชื่อศูนย์บริการ
             </a>
-            <a href="#" id="navButton">
+            <a href="#" class="navButton">
                 <i class="fa fa-caret-right"></i>
                 รายการอะไหล่
             </a>
