--- a/info_page.html
+++ b/info_page.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1>Page Header</h1>
+    <h1 id="pageHeader">Page Header</h1>
     <form action="#">
         <label for="search">Search</label>
         <select id="searchField" name="searchField">
