--- a/home.html
+++ b/home.html
@@ -10,9 +10,9 @@
     <!-- The sidenav -->
     <div class="sidenav">
         <img border="0" alt="SEUTRONG" src="images/LOGO_square_or.jpg" width="200" height="200">
-        <a href="repair_info.html">ข้อมูลบริการซ่อม</a>
-        <a href="return_claim_info.html">ข้อมูลการคืนสินค้า</a>
-        <a href="delivery_info.html">ข้อมูลการจัดส่งสินค้า</a>
+        <a href="#" class="navButton">ข้อมูลบริการซ่อม</a>
+        <a href="#" class="navButton">ข้อมูลการคืนสินค้า</a>
+        <a href="#" class="navButton">ข้อมูลการจัดส่งสินค้า</a>
         <button class="dropdown-btn">
             ข้อมูลการติดตั้ง
             <i class="fa fa-caret-down"></i>
