--- a/info_page.html
+++ b/info_page.html
@@ -21,10 +21,8 @@
                 <input type="submit" value="Se">
             </form>
         </div>
-        <div class="add-button">
-            <form action="#">
-                <input type="submit" value="Add new record">
-            </form>
+        <div class="add-button" id="addButton" >
+            <button>Add new record</button>
         </div>
         <div class="info-table">
             <table class="infoTable" id="infoTable">
