Designed buttons and table to info_page.html

--- a/info_page.html
+++ b/info_page.html
@@ -12,23 +12,30 @@
         </div>
         <div class="search-box">
             <form action="#">
-                <label for="searchDropdown">Search</label>
                 <select id="searchDropdown" name="searchDropdown">
                     <option value="field">Field</option>
                     <!-- option from database fields -->
                 </select>
                 <input type="search" id="searchField" name="searchField">
-                <input type="submit" value="Se">
+                <input type="submit" value="ค้นหา">
             </form>
         </div>
         <div class="add-button" id="addButton" >
-            <button>Add new record</button>
+            <button>เพิ่มรายการใหม่</button>
         </div>
         <div class="info-table">
             <table class="infoTable" id="infoTable">
                 <tr>
                     <th>Column Header</th>
                     <th>Column Header</th>
+                </tr>
+                <tr>
+                    <td>data1</td>
+                    <td>data2</td>
+                </tr>
+                <tr>
+                    <td>data1</td>
+                    <td>data2</td>
                 </tr>
                 <tr>
                     <td>data1</td>
