Add logo in login page

--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
 
 <body>
   <div class="login">
+    <img src="images/LOGO.jpg">
     <input type="text" placeholder="Username" id="username">
     <input type="password" placeholder="Password" id="password">
     <input type="submit" value="Sign In">
