Add pagination to info_page

--- a/info_page.html
+++ b/info_page.html
@@ -20,7 +20,7 @@
                 <input type="submit" value="ค้นหา">
             </form>
         </div>
-        <div class="add-button" id="addButton" >
+        <div class="add-button" id="addButton">
             <button>เพิ่มรายการใหม่</button>
         </div>
         <div class="info-table">
@@ -43,12 +43,16 @@
                 </tr>
             </table>
         </div>
-        <div class="page-nav">
-            <div class="pageNav">
-                <a href="#" class="previous">Previous</a>
-                <a href="#" class="next">Next</a>
+        <div class="page-center">
+            <div class="pagination">
+                <a href="#" class="previous">&laquo;</a>
+                <a href="#" class="p1">1</a>
+                <a href="#" class="p2">2</a>
+                <a href="#" class="p3">3</a>
+                <a href="#" class="next">&raquo;</a>
             </div>
         </div>
+    </div>
     </div>
 </body>
 
