--- a/home.html
+++ b/home.html
@@ -57,6 +57,15 @@
                 รายการอะไหล่
             </a>
         </div>
+        <div class="dropup">
+            <button class="dropbtn">
+                <i class="fa fa-fw fa-user"></i>
+                Staff Name
+            </button>
+            <div class="dropup-content">
+                <a href="#">ออกจากระบบ</a>
+            </div>
+        </div>
     </div>
 
     <div class="main" id="mainContent">First content</div>
