--- a/forms/brand_form.html
+++ b/forms/brand_form.html
@@ -10,8 +10,8 @@
         <label for="brandID">รหัสยี่ห้อ</label>
         <input type="number" id="brandID" name="brandID">  <!-- auto generate -->
         <br><br>
-        <label for="brandEngName">ชื่อยี่ห้อ</label>
-        <input type="text" id="brandEngName" name="brandEngName">
+        <label for="brandName">ชื่อยี่ห้อ</label>
+        <input type="text" id="brandName" name="brandName">
         <br><br>
         <input class="btn" type="submit" value="Save">
     </form>
