--- a/forms/delivery_form.html
+++ b/forms/delivery_form.html
@@ -8,13 +8,14 @@
 <body>
     <form action="#">
         <div class="customerInfo">
-            <input class="btn" type="submit" value="Search Customer">
-            <input class="btn" type="submit" value="New Customer">
-            <br><br>
-            <!-- display only -->
             <label for="customerID">รหัสลูกค้า</label>
             <input type="number" id="customerID" name="customerID">
             <br><br>
+            <!-- pop up modal form when search -->
+            <input class="btn" type="submit" value="ค้นหาลูกค้า">
+            <input class="btn" type="submit" value="เพิ่มลูกค้าใหม่">
+            <br><br>
+            <!-- display only -->
             <label for="customerName">ชื่อ-นามสกุล ลูกค้า</label>
             <input type="text" id="customerName" name="customerName">
             <br><br>
@@ -27,8 +28,8 @@
         </div>
 
         <div class="purchaseInfo">
-            <label for="receiveDate">วันที่-เวลา ขาย</label>
-            <input type="datetime" id="receiveDate" name="customerID">
+            <label for="purchaseDate">วันที่-เวลา ขาย</label>
+            <input type="datetime" id="purchaseDate" name="purchaseDate">
             <br><br>
             <p>พนักงานขาย</p>
             <label for="staffID">รหัสพนักงาน</label>
@@ -42,10 +43,10 @@
 
         <div class="productInfo">
             <p>จำนวนสินค้าที่จะจัดส่ง</p>
-            <input type="number" id="productAcc" name="productAcc">
+            <input type="number" id="productQty" name="productQty">
             <span>ชิ้น</span>
             <br><br>
-            <!-- from input number -->
+            <!-- generate from input number -->
             <label for="productName">สินค้า</label>
             <input type="text" id="productName" name="productName">
             <br><br>
@@ -64,8 +65,11 @@
         </div>
 
         <div class="installationInfo">
+            <label for="deliveryJobID">เลขที่ใบจัดส่ง</label>
+            <input type="number" id="deliveryJobID" name="deliveryJobID"> <!-- auto generate -->
+            <br><br>
             <label for="appointmentDate">วันที่-เวลา การนัดหมาย</label>
-            <input type="datetime" id="receiveDate" name="customerID">
+            <input type="datetime" id="appointmentDate" name="appointmentDate">
             <br><br>
             <p>พนักงานจัดส่ง</p>
             <label for="staffID">รหัสพนักงาน</label>
@@ -79,12 +83,21 @@
             <input type="radio" id="productEquip" name="productEquip">
             <label for="productEquip">ไม่มี</label>
             <br>
-            <input type="radio" id="productAcc" name="productAcc">
-            <label for="productAcc">มี</label>
-            <input type="number" id="productAcc" name="productAcc">
-            <!-- <input type="text" id="productAcc" name="productAcc">
-            <input type="text" id="productAcc" name="productAcc">
-            <input type="text" id="productAcc" name="productAcc"> -->
+            <input type="radio" id="productEquip" name="productEquip">
+            <label for="productEquip">มี</label>
+            <br><br>
+            <span>จำนวน</span>
+            <input type="number" id="productQty" name="productQty">
+            <span>ชิ้น</span>
+            <br><br>
+            <!-- generate from input number -->
+            <label for="equipmentID">รหัสอุปกรณ์</label>
+            <input type="number" id="equipmentID" name="equipmentID">
+            <br><br>
+            <!-- display only -->
+            <label for="equipmentName">ชื่ออุปกรณ์</label>
+            <input type="text" id="equipmentName" name="equipmentName">
+            <br><br>
         </div>
 
         <input class="btn" type="submit" value="Submit">
