--- a/forms/installation_sat_form.html
+++ b/forms/installation_sat_form.html
@@ -8,13 +8,14 @@
 <body>
     <form action="#">
         <div class="customerInfo">
-            <input class="btn" type="submit" value="Search Customer">
-            <input class="btn" type="submit" value="New Customer">
-            <br><br>
-            <!-- display only -->
             <label for="customerID">รหัสลูกค้า</label>
             <input type="number" id="customerID" name="customerID">
             <br><br>
+            <!-- pop up modal form when search -->
+            <input class="btn" type="submit" value="ค้นหาลูกค้า">
+            <input class="btn" type="submit" value="เพิ่มลูกค้าใหม่">
+            <br><br>
+            <!-- display only -->
             <label for="customerName">ชื่อ-นามสกุล ลูกค้า</label>
             <input type="text" id="customerName" name="customerName">
             <br><br>
@@ -27,8 +28,8 @@
         </div>
 
         <div class="purchaseInfo">
-            <label for="receiveDate">วันที่-เวลา ขาย</label>
-            <input type="datetime" id="receiveDate" name="customerID">
+            <label for="purchaseDate">วันที่-เวลา ขาย</label>
+            <input type="datetime" id="purchaseDate" name="purchaseDate">
             <br><br>
             <p>พนักงานขาย</p>
             <label for="staffID">รหัสพนักงาน</label>
@@ -69,8 +70,11 @@
         </div>
 
         <div class="installationInfo">
+            <label for="installJobID">เลขที่ใบงานติดตั้ง</label>
+            <input type="number" id="installJobID" name="installJobID"> <!-- auto generate -->
+            <br><br>
             <label for="appointmentDate">วันที่-เวลา การนัดหมาย</label>
-            <input type="datetime" id="receiveDate" name="customerID">
+            <input type="datetime" id="appointmentDate" name="appointmentDate">
             <br><br>
             <p>พนักงานติดตั้ง</p>
             <label for="staffID">รหัสพนักงาน</label>
@@ -87,19 +91,18 @@
             <input type="radio" id="productEquip" name="productEquip">
             <label for="productEquip">มี</label>
             <br><br>
-            <input type="checkbox" id="productEquip" name="productEquip">
-            <label for="productEquip">สายสัญญาณ</label>
-            <input type="number" id="productEquip" name="productEquip">
-            <span>เมตร</span>
+            <span>จำนวน</span>
+            <input type="number" id="productQty" name="productQty">
+            <span>ชิ้น</span>
             <br><br>
-            <!-- <input type="checkbox" id="productEquip" name="productEquip">
-            <label for="productEquip">ท่อน้ำยา</label>
-            <input type="number" id="productEquip" name="productEquip">
-            <span>เมตร</span>
+            <!-- generate from input number -->
+            <label for="equipmentID">รหัสอุปกรณ์</label>
+            <input type="number" id="equipmentID" name="equipmentID">
             <br><br>
-            <input type="checkbox" id="productEquip" name="productEquip">
-            <label for="productEquip">รางครอบท่อ</label>
-            <br><br> -->
+            <!-- display only -->
+            <label for="equipmentName">ชื่ออุปกรณ์</label>
+            <input type="text" id="equipmentName" name="equipmentName">
+            <br><br>
         </div>
 
         <input class="btn" type="submit" value="Submit">
