--- a/forms/service_partner_form.html
+++ b/forms/service_partner_form.html
@@ -38,9 +38,21 @@
         <input type="text" id="TaxIDNumber" name="TaxIDNumber">
         <br><br>
 
-        <label for="partnerAddress">ที่อยู่</label>
-        <input type="text" id="partnerAddress" name="partnerAddress">
+        <p>ที่อยู่</p>
+        <textarea id="customerAddress" name="customerAddress" placeholder="บ้านเลขที่ หมู่บ้าน ถนน"></textarea>
+        <br>
+        <input id="input_zipcode" placeholder="รหัสไปรษณีย์" />
+        <select id="input_province" onchange="showAmphoes()">
+            <option value="">กรุณาเลือกจังหวัด</option>
+        </select>
+        <select id="input_amphoe" onchange="showDistricts()">
+            <option value="">กรุณาเลือกอำเภอ</option>
+        </select>
+        <select id="input_district" onchange="showZipcode()">
+            <option value="">กรุณาเลือกตำบล</option>
+        </select>
         <br><br>
+        
         <label for="partnerTel">หมายเลขโทรศัพท์</label>
         <input type="text" id="partnerTel" name="partnerTel">
         <br><br>
