Add right bar for notification

--- a/home.html
+++ b/home.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-    <!-- The sidenav -->
-    <div class="sidenav">
+    <!-- LEFT  -->
+    <div class="leftsidenav">
         <img border="0" alt="SEUTRONG" src="images/LOGO_square_or.jpg" width="200" height="200">
         <a href="#" class="navButton">ข้อมูลบริการซ่อม</a>
         <a href="#" class="navButton">ข้อมูลการคืนสินค้า</a>
@@ -68,7 +68,121 @@
         </div>
     </div>
 
+    <!-- MAIN -->
     <div class="main" id="mainContent">First content</div>
+
+    <!-- RIGTH -->
+    <div class="rightsidenav">
+        <h3>งานติดตั้ง</h3>
+        <h4>แอร์</h4>
+        <div class="card">
+            <div class="jobID">
+                <b>Job ID</b>
+            </div>
+            <div class="jobDetail">
+                วันที่-เวลา การนัดหมาย<br>
+                ชื่อ-นามสกุล ลูกค้า<br>
+                หมายเลขโทรศัพท์<br>
+                สินค้า/ยี่ห้อ/รุ่น<br>
+                พนักงานติดตั้ง
+            </div>
+            <div class="groupbtn">
+                <button class="editbtn">แก้ไข</button>
+                <button class="checkbtn">&#10003;</button>
+                <button class="crossbtn">&#10005;</button>
+            </div>
+        </div>
+        <h4>จานดาวเทียม</h4>
+        <div class="card">
+            <div class="jobID">
+                <b>Job ID</b>
+            </div>
+            <div class="jobDetail">
+                วันที่-เวลา การนัดหมาย<br>
+                ชื่อ-นามสกุล ลูกค้า<br>
+                หมายเลขโทรศัพท์<br>
+                สินค้า/ยี่ห้อ/รุ่น<br>
+                พนักงานติดตั้ง
+            </div>
+            <div class="groupbtn">
+                <button class="editbtn">แก้ไข</button>
+                <button class="checkbtn">&#10003;</button>
+                <button class="crossbtn">&#10005;</button>
+            </div>
+        </div>
+        <h4>เครื่องทำน้ำอุ่น</h4>
+        <div class="card">
+            <div class="jobID">
+                <b>Job ID</b>
+            </div>
+            <div class="jobDetail">
+                วันที่-เวลา การนัดหมาย<br>
+                ชื่อ-นามสกุล ลูกค้า<br>
+                หมายเลขโทรศัพท์<br>
+                สินค้า/ยี่ห้อ/รุ่น<br>
+                พนักงานติดตั้ง
+            </div>
+            <div class="groupbtn">
+                <button class="editbtn">แก้ไข</button>
+                <button class="checkbtn">&#10003;</button>
+                <button class="crossbtn">&#10005;</button>
+            </div>
+        </div>
+        <h3>งานจัดส่ง</h3>
+        <div class="card">
+            <div class="jobID">
+                <b>Job ID</b>
+            </div>
+            <div class="jobDetail">
+                ชื่อ-นามสกุล ลูกค้า<br>
+                วันที่-เวลา การนัดหมาย<br>
+                หมายเลขโทรศัพท์<br>
+                สินค้า/ยี่ห้อ/รุ่น<br>
+                พนักงานจัดส่ง
+            </div>
+            <div class="groupbtn">
+                <button class="editbtn">แก้ไข</button>
+                <button class="checkbtn">&#10003;</button>
+                <button class="crossbtn">&#10005;</button>
+            </div>
+        </div>
+        <h3>งานบริการซ่อม</h3>
+        <div class="card">
+            <div class="jobID">
+                <b>Job ID</b>
+            </div>
+            <div class="jobDetail">
+                สถานะ<br>
+                สิ่งที่ต้องทำ<br>
+                ชื่อ-นามสกุล ลูกค้า<br>
+                สินค้า/ยี่ห้อ/รุ่น<br>
+                อาการ
+            </div>
+            <div class="groupbtn">
+                <button class="editbtn">แก้ไข</button>
+                <button class="checkbtn">&#10003;</button>
+                <button class="crossbtn">&#10005;</button>
+            </div>
+        </div>
+        <h3>การคืนสินค้า</h3>
+        <div class="card">
+            <div class="jobID">
+                <b>Job ID</b>
+            </div>
+            <div class="jobDetail">
+                สถานะ<br>
+                สิ่งที่ต้องทำ<br>
+                สินค้า/ยี่ห้อ/รุ่น<br>
+                อาการ
+            </div>
+            <div class="groupbtn">
+                <button class="editbtn">แก้ไข</button>
+                <button class="checkbtn">&#10003;</button>
+                <button class="crossbtn">&#10005;</button>
+            </div>
+        </div>
+        <br><br><br>
+    </div>
 
     <script>
         require('./home.js');
