add global variable for staffName

--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
             </a>
         </div>
         <div class="dropup">
-            <button class="dropbtn">
+            <button class="dropbtn" id="staffName">
                 <i class="fa fa-fw fa-user"></i>
                 Staff Name
             </button>
