add functionality to logout button

--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
                 Staff Name
             </button>
             <div class="dropup-content">
-                <a href="#">ออกจากระบบ</a>
+                <a href="#" id="logoutButton" >ออกจากระบบ</a>
             </div>
         </div>
     </div>
