--- a/forms/delivery_form.html
+++ b/forms/delivery_form.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Seutrong Service</title>
-    <link rel="stylesheet" href="styles/delivery_form.css">
+    <link rel="stylesheet" href="styles/form.css">
 </head>
 
 <body>
@@ -10,124 +10,223 @@
         <form action="#">
             <div class="row">
                 <div class="column">
-                    <div class="customerInfo">
-                        <p>ข้อมูลลูกค้า</p>
-                        <!-- pop up modal form when search -->
-                        <input class="btn" type="submit" value="ค้นหาลูกค้า">
-                        <!-- The Modal -->
-                        <div id="searchModal" class="modal">
-                            <!-- Modal content -->
-                            <div class="modal-content">
-                                <!-- searching by id, name, phone number  -->
-                                <label for="customerID">รหัสลูกค้า</label>
-                                <input type="number" id="customerID" name="customerID">
-                                <br>
-                                <label for="customerName">ชื่อ-นามสกุล ลูกค้า</label>
-                                <input type="text" id="customerName" name="customerName">
-                                <br>
-                                <label for="customerTel">หมายเลขโทรศัพท์</label>
-                                <input type="text" id="customerTel" name="customerTel">
-                                <br>
-                                <input class="btn" type="submit" value="ค้นหาลูกค้า">
-                            </div>
-                        </div>
-                        <input class="btn" type="submit" value="เพิ่มลูกค้าใหม่">
-                        <br>
-                        <!-- display only -->
-                        <label for="customerID">รหัสลูกค้า</label>
-                        <input type="number" id="customerID" name="customerID">
-                        <br>
-                        <label for="customerName">ชื่อ-นามสกุล ลูกค้า</label>
-                        <input type="text" id="customerName" name="customerName">
-                        <br>
-                        <label for="customerAddress">ที่อยู่</label>
-                        <textarea id="customerAddress" name="customerAddress"></textarea>
-                        <br>
-                        <label for="customerTel">หมายเลขโทรศัพท์</label>
-                        <input type="text" id="customerTel" name="customerTel">
-                    </div>
-                </div>
-                <div class="column">
                     <div class="purchaseInfo">
                         <p>ข้อมูลการซื้อ</p>
-                        <label for="purchaseDate">วันที่-เวลา ขาย</label>
-                        <input type="datetime" id="purchaseDate" name="purchaseDate">
-                        <br>
-                        <span>พนักงานขาย</span><br>
-                        <label for="staffID">รหัสพนักงาน</label>
-                        <input type="number" id="staffID" name="staffID">
-                        <br>
-                        <!-- display only -->
-                        <label for="staffName">ชื่อพนักงาน</label>
-                        <input type="text" id="staffName" name="staffName">
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="column">
-                    <div class="productInfo">
-                        <p>รายละเอียดสินค้า</p>
-                        <!-- generate from input number -->
-                        <label for="productName">สินค้า</label>
-                        <input type="text" id="productName" name="productName">
-                        <br>
-                        <label for="productBrand">ยี่ห้อ</label>
-                        <select id="productBrand" name="productBrand">
-                            <option value="Brand">Product Brand</option>
-                            <!-- data from brand table -->
-                        </select>
-                        <br>
-                        <label for="productModel">รุ่น</label>
-                        <input type="text" id="productModel" name="productModel">
-                        <br>
-                        <label for="productSN">หมายเลขเครื่อง</label>
-                        <input type="text" id="productSN" name="productSN">
-                        <br>
-                        <span>จำนวนสินค้า</span>
-                        <input type="number" id="productQty" name="productQty">
-                        <span>ชิ้น</span>
+                        <table>
+                            <tr>
+                                <td>วันที่-เวลา ขาย</td>
+                                <td>
+                                    <input type="datetime" id="purchaseDate" name="purchaseDate">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">
+                                    <span>พนักงานขาย</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>รหัสพนักงาน</td>
+                                <td>
+                                    <input type="number" id="staffID" name="staffID">
+                                </td>
+                            </tr>
+                            <tr>
+                                <!-- display only -->
+                                <td>ชื่อพนักงาน</td>
+                                <td>
+                                    <input type="text" id="staffName" name="staffName">
+                                </td>
+                            </tr>
+                        </table>
                     </div>
                 </div>
                 <div class="column">
                     <div class="appoinmentInfo">
                         <p>การนัดหมาย</p>
-                        <label for="deliveryJobID">เลขที่ใบจัดส่ง</label>
-                        <input type="number" id="deliveryJobID" name="deliveryJobID"> <!-- auto generate -->
-                        <br>
-                        <label for="appointmentDate">วันที่-เวลา การนัดหมาย</label>
-                        <input type="datetime" id="appointmentDate" name="appointmentDate">
-                        <br>
-                        <span>พนักงานจัดส่ง</span><br>
-                        <label for="staffID">รหัสพนักงาน</label>
-                        <input type="number" id="staffID" name="staffID">
-                        <br>
-                        <!-- display only -->
-                        <label for="staffName">ชื่อพนักงาน</label>
-                        <input type="text" id="staffName" name="staffName">
+                        <table>
+                            <tr>
+                                <td>เลขที่ใบจัดส่ง</td>
+                                <td>
+                                    <input type="number" id="deliveryJobID" name="deliveryJobID"> <!-- auto generate -->
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>วันที่-เวลา การนัดหมาย</td>
+                                <td>
+                                    <input type="datetime" id="appointmentDate" name="appointmentDate">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">
+                                    <span>พนักงานจัดส่ง</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>รหัสพนักงาน</td>
+                                <td>
+                                    <input type="number" id="staffID" name="staffID">
+                                </td>
+                                <td>
+                                    <input class="btn" type="submit" value="เพิ่ม">
+                                </td>
+                            </tr>
+                            <tr>
+                                <!-- display only -->
+                                <td>ชื่อพนักงาน</td>
+                                <td>
+                                    <input type="text" id="staffName" name="staffName">
+                                </td>
+                            </tr>
+                        </table>
+
                     </div>
                 </div>
             </div>
-            <div class="installationInfo">
-                <p>อุปกรณ์ที่ใช้ในการติดตั้ง เพิ่มเติม</p>
-                <input type="radio" id="productEquip" name="productEquip">
-                <label for="productEquip">ไม่มี</label>
-                <input type="radio" id="productEquip" name="productEquip">
-                <label for="productEquip">มี</label>
-                <br>
-                <span>จำนวน</span>
-                <input type="number" id="productQty" name="productQty">
-                <span>ชิ้น</span>
-                <br>
-                <!-- generate from input number -->
-                <label for="equipmentID">รหัสอุปกรณ์</label>
-                <input type="number" id="equipmentID" name="equipmentID">
-                <br>
-                <!-- display only -->
-                <label for="equipmentName">ชื่ออุปกรณ์</label>
-                <input type="text" id="equipmentName" name="equipmentName">
-                <br><br>
+            <div class="row">
+                <div class="customerInfo">
+                    <p>ข้อมูลลูกค้า</p>
+                    <!-- display only -->
+                    <table>
+                        <tr>
+                            <td>
+                                <!-- pop up modal form when search -->
+                                <input class="search-btn" type="submit" value="ค้นหาลูกค้า">
+                                <!-- The Modal -->
+                                <div id="searchModal" class="modal">
+                                    <div class="modal-content">
+                                        <!-- searching by id, name, phone number  -->
+                                        <table>
+                                            <tr>
+                                                <td>
+                                                    รหัสลูกค้า
+                                                </td>
+                                                <td>
+                                                    <input type="number" id="customerID" name="customerID">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    ชื่อ-นามสกุล ลูกค้า
+                                                </td>
+                                                <td>
+                                                    <input type="text" id="customerName" name="customerName">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    หมายเลขโทรศัพท์
+                                                </td>
+                                                <td>
+                                                    <input type="text" id="customerTel" name="customerTel">
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <input class="btn" type="submit" value="ค้นหาลูกค้า">
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <input class="add-btn" type="submit" value="เพิ่มลูกค้าใหม่">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                รหัสลูกค้า
+                            </td>
+                            <td>
+                                <input type="number" id="customerID" name="customerID">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                ชื่อ-นามสกุล ลูกค้า
+                            </td>
+                            <td>
+                                <input type="text" id="customerName" name="customerName">
+                            </td>
+                            <td>
+                                หมายเลขโทรศัพท์
+                            </td>
+                            <td>
+                                <input type="text" id="customerTel" name="customerTel">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                ที่อยู่
+                            </td>
+                            <td colspan="3">
+                                <textarea id="customerAddress" name="customerAddress"></textarea>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
             </div>
-
+            <div class="row">
+                <div class="productInfo">
+                    <p>รายละเอียดสินค้า</p>
+                    <table>
+                        <tr>
+                            <th>สินค้า</th>
+                            <th>ยี่ห้อ</th>
+                            <th>รุ่น</th>
+                            <th>หมายเลขเครื่อง</th>
+                        </tr>
+                        <tr>
+                            <td>
+                                <input type="text" id="productName" name="productName">
+                            </td>
+                            <td>
+                                <select id="productBrand" name="productBrand">
+                                    <option value="Brand">Product Brand</option>
+                                    <!-- data from brand table -->
+                                </select>
+                            </td>
+                            <td>
+                                <input type="text" id="productModel" name="productModel">
+                            </td>
+                            <td>
+                                <input type="text" id="productSN" name="productSN">
+                            </td>
+                        </tr>
+                    </table>
+                    <input class="btn" type="submit" value="เพิ่ม">
+                    <span>จำนวนสินค้า</span>
+                    <input type="number" id="productQty" name="productQty">
+                    <span>ชิ้น</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="installationInfo">
+                    <p>อุปกรณ์ที่ใช้ในการติดตั้ง เพิ่มเติม</p>
+                    <input type="radio" id="productEquip" name="productEquip">
+                    <label for="productEquip">ไม่มี</label>
+                    <input type="radio" id="productEquip" name="productEquip">
+                    <label for="productEquip">มี</label>
+                    <table>
+                        <tr>
+                            <th>รหัสอุปกรณ์</th>
+                            <th>ชื่ออุปกรณ์</th>
+                            <th>จำนวน</th>
+                        </tr>
+                        <tr>
+                            <td>
+                                <input type="number" id="equipmentID" name="equipmentID">
+                            </td>
+                            <td>
+                                <input type="text" id="equipmentName" name="equipmentName">
+                            </td>
+                            <td>
+                                <input type="number" id="equipmentQty" name="equipmentQty">
+                            </td>
+                        </tr>
+                    </table>
+                    <input class="btn" type="submit" value="เพิ่ม">
+                    <span>จำนวน</span>
+                    <input type="number" id="productQty" name="productQty">
+                    <span>ชิ้น</span>
+                </div>
+            </div>
             <input class="btn" type="submit" value="Submit">
         </form>
     </div>
