Fix design info page

--- a/home.html
+++ b/home.html
@@ -56,6 +56,10 @@
                 <i class="fa fa-caret-right"></i>
                 รายการอะไหล่
             </a>
+            <a href="#" class="navButton">
+                <i class="fa fa-caret-right"></i>
+                รายการอุปกรณ์
+            </a>
         </div>
         <div class="dropup">
             <button class="dropbtn" id="staffName">
